Add SimpleUserControlFromYaml branch
Add Simple UserControl which get data from yaml config file

--- a/WpfApplication1/WpfApplication1/MainWindow.xaml
+++ b/WpfApplication1/WpfApplication1/MainWindow.xaml
@@ -4,9 +4,32 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApplication1"
+        xmlns:templates="clr-namespace:WpfApplication1.Views.Templates"
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
-    <Grid>
-        
-    </Grid>
+    <!--<Grid>-->
+
+        <!--
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>-->
+
+    <StackPanel>
+
+       <!--пример textBoxControl'a в который биндятся данные из yaml-->
+       <templates:TextBoxControl DataContext="{Binding TextBoxEx, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+
+    </StackPanel>
+    <!--</Grid>-->
 </Window>
